fix navigation appearing behind headings on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,7 @@ body {
   position: sticky;
   position: -webkit-sticky;
   top: 0;
+  z-index: 10;
 }
 
 #nav-container {
